lec6ex1/compute/hls/csim/report/compute_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch CLANG as the compiler.
   Compiling ../../../../../homework2/lec6ex1.cpp in debug mode
../../../../../homework2/lec6ex1.cpp:34:5: error: use of undeclared identifier 'check_results'
    check_results();
    ^
1 error generated.
make: *** [csim.mk:87: obj/lec6ex1.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
